--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,6 +238,11 @@ canvas.vanta-canvas {
   margin-top: 2.5rem;
 }
 
+.sticky-container {
+  width: 100%;
+  height: 100%;
+}
+
 .skill {
   opacity: 0;
   display: flex;
